# emisiones-kitral

./: Crank_agua.m  README.md  cell2test.py  pyproject.toml  requirements.txt  requirements.txt.dev
emisiones/: Average.py  PerPixelAverage.py  emisiones_copa.py  emisiones_final.py  emisiones_final_IPCC.ipynb  emisiones_superficial.py  fuego_superficial.py  tif-asc.ipynb
test/: test.py  test_one.py
