# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"
# 
# [project]
# name = "ramiro-lib"
# version = "0.1.0"
# authors = [
#     {name = "Ramiro", email = "ramiro@ing.uchile.cl"},
#     {name = "Fernando", email = "fbadilla@ing.uchile.cl"}
# ]
# description = "emisiones kitral"
# readme = "README.md"
# requires-python = ">=3.11"
# keywords = ["fire", "wildfires", "forest fires", "fire management", "fire analytics", "fire research", "fire modeling"]
# license = {text = "GPLv3"}
# dependencies = [
#     "rasterio",
#     "numpy",
#     "pandas",
# ]

[tool.pytest.ini_options]
addopts = ["-ra"]
pythonpath = [
  "emisiones"
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
enabled = true
line-length = 120
preview = true

[tool.isort]
line_length = 120

[tool.pylint.BASIC]
good-names = ["i",
              "j",
              "k",
              "H",
              "W",
              "df",
              "dt",
              "dx",
              "dy",
              "ok",
              "_",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylsp-mypy]
enabled = true

[tool.ruff]
line-length = 120

# Disable fix for unused imports (`F401`).
[tool.ruff.lint]
unfixable = ["F401"]

